<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideSmart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="automated_response">Automated response:</string>
    <string name="save_auto_response">Save automated response</string>
    <string name="silence_when_driving">Silence when driving</string>
    <string name="send_automated_response">Send automated response when silent</string>
    <string name="force_silent">Force silence mode until next check</string>
    <string name="force_unsilent">Disable silence mode until next check</string>
    <string name="dismiss">Disable for this trip</string>
    <string name="edit_whitelist">Edit whitelist</string>
    <string name="save_whitelist">Save to whitelist</string>

    <color name="yellowgreen">#7ed321</color>
    <color name="lightgreen">#AED581</color>
</resources>
